syntax = "proto3";

package pga.api.types.v2;

option go_package = "github.com/0xef53/phoenix-guest-agent/api/types/v2;types";

message AgentInfo {
    message Features {
        bool legacy_mode = 1;
        string serial_port = 2;
        bool without_ssh = 3;
        bool without_tcp = 4;
    }
    string version = 1;
    bool is_locked = 2;
    Features features = 3;
}

message GuestInfo {
    message Utsname {
        string sysname = 1;
        string nodename = 2;
        string release = 3;
        string version = 4;
        string machine = 5;
        string domainname = 6;
    }
    message LoadAverage {
        double one = 1;
        double five = 2;
        double fifteen = 3;
    }
    message MemStat {
        uint64 total = 1;
        uint64 free = 2;
        uint64 buffers = 3;
        uint64 cached = 4;
        uint64 free_total = 5;
    }
    message SwapStat {
        uint64 total = 1;
        uint64 free = 2;
    }
    message LoggedUser {
        string name = 1;
        string device = 2;
        string host = 3;
        int64 login_time = 4;
    }
    message BlockDevice {
        string path = 1;
        bool is_mounted = 2;
        string mount_point = 3;
        int64 size_total = 4;
        int64 size_used = 5;
        int64 size_avail = 6;
        int64 inodes_total = 7;
        int64 inodes_used = 8;
        int64 inodes_avail = 9;
    }
    Utsname uname = 1;
    int64 uptime = 2;
    LoadAverage loadavg = 3;
    MemStat mem = 4;
    SwapStat swap = 5;
    repeated LoggedUser users = 6;
    repeated BlockDevice block_devices = 7;
}

enum InetFamily {
    AF_UNSPECIFIED = 0;
    AF_INET = 2;
    AF_INET6 = 10;
}

enum RouteScope {
    SCOPE_UNIVERSE = 0;
    SCOPE_SITE = 200;
    SCOPE_LINK = 253;
    SCOPE_HOST = 254;
    SCOPE_NOWHERE = 255;
}

message RouteInfo {
    int32 link_index = 1;
    string link_name = 2;
    RouteScope scope = 3;
    string dst = 4;
    string src = 5;
    string gw = 6;
    int32 table = 7;
}

message InterfaceInfo {
    int32 index = 1;
    string name = 2;
    string hw_addr = 3;
    uint32 flags = 4;
    int32 mtu = 5;
    repeated string addrs = 6;
}

message FileStat {
    message Owner {
        uint32 uid = 1;
        string name = 2;
    }
    message Group {
        uint32 gid = 1;
        string name = 2;
    }
    string name = 1;
    uint32 mode = 2;
    bool is_dir = 3;
    Owner owner = 4;
    Group group = 5;
    int64 size_bytes = 6;
}